Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

	- tune 01_unblock.t tests a bit.

4.801 Wed Oct 22 18:33:37 CEST 2008
	- improve readline speed for very long "lines".
	- backport to 5.8.8.

4.8  Thu Oct  2 13:34:40 CEST 2008
	- new function Coro::AIO::aio_wait.
        - Coro.:AIO and Coro::BDB now "use Coro::AnyEvent".
        - greatly speed up and reduce memory usage of Coro::AIO requests.
        - implement some other µ-optimisations.

4.749 Mon Sep 29 14:40:12 CEST 2008
	- port to slow and broken pseudo-threaded perls. (courtesy pippijn).

4.748 Sat Sep 27 14:03:19 CEST 2008
	- implement, but do not document, PerlIO::cede(granularity).
	- Coro::Storable forgot to wrap Storable::pstore.
        - work around the multitude of leaks and memory corruption
          bugs in PerlIO::via by using our own C-level perliol. As a side
          effect, Coro::Storable is now much, much, much faster.

4.747 Tue Sep 23 01:59:41 CEST 2008
	- fix a per-cv memleak (one empty array was leaked per
          code reference).
        - avoid a crash in coro->call|rss when the coroutine was already
          destroyed (most noticably when using Coro::Debug::ps :)
        - also protect *Storable::FILE.
        - push up default storable granularity to 20ms.

4.746 Sun Sep 21 03:22:20 CEST 2008
        - be more insistent on locking Storable against reentrancy
          in Coro::Storable.
	- move swap_def?v and throw to Coro::State, as documented.

4.745 Thu Jul 24 00:14:38 CEST 2008
	- remove debugging code related to MgPV_nolen_const, also try to
          make it compile with perl 5.8.6 (yes, apple apparently loves
          outdated software). Reported by John S.

4.744 Tue Jul  8 22:06:35 CEST 2008